# z17-randomizer

./: .gitignore  Cargo.toml  README.md  build.rs  config.json  config.toml  rustfmt.toml  server.py
.github/workflows/: build.yml
albw/: Cargo.toml
albw/src/: actor_profile.rs  actors.rs  course.rs  demo.rs  flow.rs  item.rs  language.rs  lib.rs  scene.rs
albw/src/files/: exheader.rs  mod.rs  msgbn.rs  romfs.rs  sarc.rs
albw/src/files/byaml/: de.rs  mod.rs  ser.rs
albw/tests/: flow.rs
albw/tests/common/: mod.rs
bytey/: Cargo.toml
bytey-macro/: Cargo.toml
bytey-macro/src/: lib.rs
bytey/src/: lib.rs
cli/: Cargo.toml  build.rs
cli/src/: lib.rs  main.rs
game/: Cargo.toml
game/src/: courses.rs  ghosts.rs  items.rs  lib.rs  tower_stage.rs
game/src/world/: mod.rs
game/src/world/dungeons/: desert.rs  eastern.rs  graveyards.rs  house.rs  hyrule.rs  lorule.rs  (+3 more)
jack/: Cargo.toml
jack/src/: item.rs  lib.rs
jack/src/byaml/: course.rs  flow_chart.rs  get_item.rs  mod.rs  stage.rs
jack/src/lms/: mod.rs  msbf.rs
jack/src/lms/msbt/: formatting.rs  mod.rs
jack/src/rom/: cxi.rs  exheader.rs  fs.rs  mod.rs  region.rs  romfs.rs
jack/src/rom/code/: mod.rs
jack/src/rom/code/arm/: mod.rs
jack/src/sead/: mod.rs  sarc.rs  yaz0.rs
macros/: Cargo.toml
macros/src/: fail.rs  lib.rs  string_constants.rs
modd/: Cargo.toml
modd/src/: filler_item.rs  item.rs  lib.rs
modd/src/hints/: formatting.rs  mod.rs
modd/src/settings/: entrance_shuffle.rs  hyrule_castle.rs  logic.rs  mod.rs  pedestal.rs
modinfo/: Cargo.toml
modinfo/src/: hints.rs  hyrule_castle_setting.rs  lib.rs  pedestal_setting.rs  text.rs
modinfo/src/settings/: active_weather_vanes.rs  cracks.rs  cracksanity.rs  hyrule_castle.rs  keysy.rs  logic.rs  mod.rs  nice_items.rs  pedestal.rs  portal_shuffle.rs  portals.rs  ravios_shop.rs  trials_door.rs  weather_vanes.rs
patcher/: Cargo.toml
patcher/rom/bytey/: Cargo.toml
patcher/rom/src/: language.rs
patcher/rom/src/files/: romfs.rs
patcher/rom/tests/common/: mod.rs
patcher/src/: flow.rs  lib.rs  maps.rs  prizes.rs  scenes.rs  system.rs  util.rs
patcher/src/code/: mod.rs
patcher/src/language/: mod.rs
patcher/src/messages/: hint_ghosts.rs  mod.rs  msbt.rs
patcher/src/world/: byaml.rs  mod.rs
presets/: Example.json  Example.toml  Standard.toml
randomizer/: Cargo.toml
randomizer/src/: check.rs  cli.rs  constants.rs  entrance_rando.rs  fill.rs  filler.rs  filler_item.rs  filler_util.rs  graph.rs  hints.rs  item_pools.rs  lib.rs  loading_zone.rs  loading_zone_pair.rs  location.rs  location_node.rs  logic.rs  logic_mode.rs  main.rs  old_world.rs  path.rs  pool.rs  progress.rs  queue.rs  queue_custom.rs  settings.rs  state.rs  system.rs  world.rs
randomizer/src/filler/: alr.rs  check.rs  cracks.rs  filler_item.rs  hints.rs  item_pools.rs  loading_zone_pair.rs  location.rs  location_node.rs  logic.rs  metrics.rs  mod.rs  path.rs  portals.rs  progress.rs  text.rs  tower.rs  tower_stage.rs  treacherous_tower.rs  trials.rs  util.rs  vanes.rs
randomizer/src/hints/: formatting.rs  hint_color.rs  hints.rs  mod.rs
randomizer/src/legacy/: graph.rs  mod.rs  path.rs
randomizer/src/metrics/: mod.rs
randomizer/src/model/: check.rs  filler_item.rs  loading_zone_pair.rs  location.rs  location_node.rs  logic.rs  metrics.rs  mod.rs  progress.rs
randomizer/src/patch/: actors.rs  demo.rs  flow.rs  maps.rs  mod.rs  msbf.rs  prizes.rs  ref.rs  scene_env.rs  scenes.rs  util.rs
randomizer/src/patch/byaml/: course.rs  get_item.rs  mod.rs  scene_env.rs  stage.rs
randomizer/src/patch/code/: mod.rs
randomizer/src/patch/code/arm/: data.rs  ls.rs  lsm.rs  mod.rs
randomizer/src/patch/lms/: mod.rs  msbf.rs
randomizer/src/patch/messages/: formatting.rs  hint_ghosts.rs  mod.rs  msbt.rs
randomizer/src/regions/: mod.rs
randomizer/src/regions/dungeons/: castle.rs  dark.rs  desert.rs  eastern.rs  graveyard.rs  graveyards.rs  house.rs  hyrule.rs  ice.rs  lorule.rs  skull.rs  swamp.rs  thieves.rs  tower.rs  turtle.rs
randomizer/src/regions/hyrule/: death.rs  desert.rs  eastern.rs  field.rs  hyrule_castle.rs  irene.rs  kakariko.rs  lake.rs  lost.rs  maiamai.rs  ravio.rs  river.rs  sanctuary.rs  southern.rs  zora.rs  zoras.rs
randomizer/src/regions/lorule/: chamber.rs  dark.rs  death.rs  field.rs  graveyard.rs  lake.rs  maiamai.rs  misery.rs  skull.rs
randomizer/src/settings/: hint_settings.rs  logic.rs  mod.rs  pedestal_setting.rs  settings.rs
randomizer/src/world/: dark.rs  desert.rs  eastern.rs  gales.rs  hera.rs  hyrule.rs  hyrule_castle.rs  ice.rs  lorule.rs  lorule_castle.rs  mod.rs  skull.rs  swamp.rs  thieves.rs  turtle.rs
randomizer/tests/: randomize.rs
ref/: FlagMapping.txt  albw_actor_ids.txt  albw_chest_reward_ids.txt  alternate_model_loading_for_albw.txt  byaml_documentation.txt  method.txt
rom/: Cargo.toml
rom/bytey-macro/: Cargo.toml
rom/bytey/src/: lib.rs
rom/src/: actors.rs  course.rs  demo.rs  flag.rs  flow.rs  get_item.rs  item.rs  language.rs  lib.rs  scene.rs
rom/src/files/: exheader.rs  mod.rs  msgbn.rs  romfs.rs  sarc.rs
rom/src/files/byaml/: actor_profile.rs  de.rs  mod.rs  scene_env.rs  ser.rs
rom/tests/: flow.rs
rom/tests/common/: mod.rs
seed/: Cargo.toml
seed/src/: csmc.rs  lib.rs
seed/src/filler/: filler_item.rs  loading_zone_pair.rs  mod.rs  pool.rs  progress.rs
seed/src/hints/: hint_color.rs  mod.rs  text.rs
seed/src/settings/: logic.rs  mod.rs  pedestal_setting.rs
seed/src/world/: check.rs  location.rs  logic.rs  mod.rs  path.rs  region.rs
seed/src/world/regions/: mod.rs
seed/src/world/regions/dungeons/: dark.rs  eastern.rs  house.rs  thieves.rs  tower.rs
seed/src/world/regions/hyrule/: death.rs  eastern.rs  lake.rs  lost.rs  zora.rs
seed/src/world/regions/lorule/: dark.rs  death.rs  field.rs
settings/: Cargo.toml
settings/src/: entrance_shuffle_setting.rs  hyrule_castle_setting.rs  lib.rs  logic.rs  logic_mode.rs  pedestal_setting.rs
src/: lib.rs  main.rs
sys/: Cargo.toml
sys/src/: lib.rs
www/: index.html  index.js  style.css  themes.js  worker.js
(+14 files in other folders)
