[workspace]
members = [
    "albw",
    "bytey",
    "bytey-macro",
    "cli",
    "jack",
    "macros",
    "randomizer",
    "settings",
]

[workspace.dependencies]
albw = { path = "./albw" }
byteorder = "1.4.3"
bytey = { path = "./bytey" }
cli = { path = "./cli" }
jack = { path = "./jack" }
log = "0.4.17"
macros = { path = "./macros" }
path-absolutize = "3.0.14"
rand = { version = "0.8.5", features = ["std_rng"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
settings = { path = "./settings" }
yaz0 = "0.3.0"

[profile.release]
codegen-units = 1
lto = true
#opt-level = "s"
#strip = true
