[package]
name = "albw"
version = "0.1.0"
authors = ["Kevin Marsolais <kevin@kevinmarsolais.co>", "Rich Fay <therichfay@gmail.com>"]
edition = "2021"
license = "GPL-2.0-or-later"

[dependencies]
bytey = { path = "../bytey" }
csv = "1.1.6"
data-encoding = "2.3.2"
log = "0.4.14"
once_cell = "1.7.2"
regex = "1.5.6"
ring = "0.17.0-alpha.11"
serde = { version = "1.0.125", features = ["derive"] }
serde_repr = "0.1.6"
yaz0 = "0.3.0"
