[package]
name = "albw"
version = "0.1.1"
authors = ["Kevin Marsolais <kevin@kevinmarsolais.co>", "Rick Fay <rickwithanh@gmail.com>"]
edition = "2021"
license = "GPL-2.0-or-later"

[dependencies]
bytey = { path = "../bytey" }
csv = "1.2.0"
data-encoding = "2.3.3"
log = "0.4.17"
once_cell = "1.17.1"
path-absolutize = "3.0.14"
regex = "1.7.1"
ring = "0.17.0-alpha.11"
serde = { version = "1.0.152", features = ["derive"] }
serde_repr = "0.1.10"
yaz0 = "0.3.0"
