[package]
name = "cli"
version = "0.2.0-nightly"
authors = ["Kevin Marsolais <kevin@kevinmarsolais.co>"]
edition = "2018"
license = "GPL-2.0-or-later"

[dependencies]
albw = { path = "../albw" }
crc = "1.8.1"
log = "0.4.14"
rand = "0.8.3"
randomizer = { path = "../randomizer" }
simplelog = "0.12.0"
structopt = "0.3.21"
sys = { path = "../sys" }

[[bin]]
name = "z17-randomizer"
path = "src/main.rs"
