[package]
name = "cli"
version = "0.1.0"
authors = ["Kevin Marsolais <kevin@kevinmarsolais.co>", "Rich Fay <therichfay@gmail.com>"]
edition = "2021"
license = "GPL-2.0-or-later"
build = "build.rs"

[build-dependencies]
winres = "0.1"

[dependencies]
albw = { path = "../albw" }
crc = "1.8.1"
log = "0.4.14"
rand = "0.8.3"
randomizer = { path = "../randomizer" }
simplelog = "0.12.0"
structopt = "0.3.21"
sys = { path = "../sys" }

[[bin]]
name = "z17-randomizer"
path = "src/main.rs"
