[package]
name = "jack"
version = "0.3.1"
authors = ["Rick Fay <rickwithanh@gmail.com>"]
edition = "2021"
license = "GPL-2.0-or-later"

[dependencies]
albw = { workspace = true }
byteorder = { workspace = true }
cli = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
yaz0 = { workspace = true }
