[package]
name = "jack"
version = "0.3.1"
authors = ["Rick Fay <rickwithanh@gmail.com>"]
edition = "2021"
license = "GPL-2.0-or-later"

[dependencies]
byteorder = { workspace = true }
cli = { workspace = true }
log = { workspace = true }
rom = { path = "../patcher/rom" }
serde = { workspace = true }
thiserror = { workspace = true }
yaz0 = { workspace = true }
