[package]
name = "patcher"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = { workspace = true }
fs_extra = "1.3.0"
game = { workspace = true }
json_comments = "0.2.1"
log = { workspace = true }
modd = { workspace = true }
path-absolutize = { workspace = true }
rom = { path = "./rom" }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3.4.0"
thiserror = { workspace = true }
try-insert-ext = "0.1.0"
