[package]
name = "randomizer"
version = "0.3.1"
authors = [
    "Kevin Marsolais <kevin@kevinmarsolais.co>",
    "Rick Fay <rickwithanh@gmail.com>",
]
edition = "2021"
license = "GPL-2.0-or-later"

[dependencies]
cli = { workspace = true }
game = { workspace = true }
log = { workspace = true }
modd = { workspace = true }
queue = "0.3.2-final"
rand = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
