[package]
name = "randomizer"
version = "0.3.1"
authors = [
    "Kevin Marsolais <kevin@kevinmarsolais.co>",
    "Rick Fay <rickwithanh@gmail.com>",
]
edition = "2021"
license = "GPL-2.0-or-later"
build = "../randomizer/build.rs"

[build-dependencies]
winres = "0.1"

[dependencies]
albw = { workspace = true }
byteorder = { workspace = true }
cli = { workspace = true }
formatx = "0.2.1"
fs_extra = "1.3.0"
jack = { workspace = true }
json_comments = "0.2.1"
lazy_static = "1.4.0"
log = { workspace = true }
macros = { workspace = true }
queue = "0.3.2-final"
path-absolutize = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
settings = { workspace = true }
simplelog = "0.12.0"
structopt = "0.3.26"
tempfile = "3.4.0"
try-insert-ext = "0.1.0"
yaz0 = { workspace = true }

[[bin]]
name = "albw-randomizer"
path = "./src/main.rs"

[[bin]]
name = "albw-plandomizer"
path = "./src/bin/plando.rs"
