[package]
name = "randomizer"
version = "0.3.1"
authors = [
    "Kevin Marsolais <kevin@kevinmarsolais.co>",
    "Rick Fay <rickwithanh@gmail.com>",
]
edition = "2021"
license = "GPL-2.0-or-later"

[dependencies]
byteorder = { workspace = true }
cli = { workspace = true }
game = { workspace = true }
fs_extra = "1.3.0"
json_comments = "0.2.1"
lazy_static = "1.4.0"
log = { workspace = true }
macros = { workspace = true }
modinfo = { workspace = true }
queue = "0.3.2-final"
path-absolutize = { workspace = true }
rand = { workspace = true }
rom = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3.7.1"
try-insert-ext = "0.1.0"
