[package]
name = "rom"
version = "0.1.1"
authors = [
    "Kevin Marsolais <kevin@kevinmarsolais.co>",
    "Rick Fay <rickwithanh@gmail.com>",
]
edition = "2021"
license = "GPL-2.0-or-later"

[dependencies]
bytey = { workspace = true }
csv = "1.2.0"
data-encoding = "2.3.3"
game = { workspace = true }
log = { workspace = true }
path-absolutize = { workspace = true }
regex = "1.7.1"
ring = "0.17.0-alpha.11"
serde = { workspace = true }
serde_repr = { workspace = true }
strum = { workspace = true }
yaz0 = { workspace = true }
