[package]
name = "settings"
version = "0.3.0"
authors = ["Rick Fay <rickwithanh@gmail.com>"]
edition = "2021"
license = "GPL-2.0-or-later"

[dependencies]
macros = { path = "../macros" }
log = "0.4.17"
rand = { version = "0.8.5", features = ["std_rng"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
